kubernetes/ingress/ingress-config_map.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-custom-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "4k"
spec:
  rules:
  - host: custom-example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-service
            port:
              number: 80
